// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectedRoute with a token requiring authentication renders the authenticated component 1`] = `
<div>
  <div>
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`ProtectedRoute with a token requiring unauthentication asks for logout 1`] = `
<div>
  <div>
    <div>
      Logout
    </div>
  </div>
</div>
`;

exports[`ProtectedRoute without a token requiring authentication asks for login 1`] = `
<div>
  <div>
    <div>
      Login
    </div>
  </div>
</div>
`;

exports[`ProtectedRoute without a token requiring unauthentication renders the unauthenticated component 1`] = `
<div>
  <div>
    <div>
      Test
    </div>
  </div>
</div>
`;
